Keybord changed and changing colours

--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
 
 						</div>
 					</section>
-					<div class = "keyboard" role="group" aria-label="Keyboard" style="width: 420px; height: 420px; position: relative;">
+					<!-- <div class = "keyboard" role="group" aria-label="Keyboard" style="width: 420px; height: 420px; position: relative;">
 						<div class ="Keyboard-module-row">
-							<button type="button" data-key = "q" >q</button>
-							<button type="button" data-key = "w" >w</button>
-							<button type="button" data-key = "e" >e</button>
+							<button type="button" id="q" data-key = "q" >q</button>
+							<button type="button" id="w" data-key = "w" >w</button>
+							<button type="button" id="e" data-key = "e" >e</button>
 							<button type="button" data-key = "r" >r</button>
 							<button type="button" data-key = "t" >t</button>
 							<button type="button" data-key = "y" >y</button>
@@ -108,10 +108,9 @@
 							<button type="button" data-key = "k" >k</button>
 							<button type="button" data-key="del" aria-label = "backspace" class="wide-button ">del
 							</button>
-							
-						</div>
-
-					</div>
+							 -->
+						<!-- </div> -->
+					<div class="key-container"></div>
 					<div id="overlay"></div>
 				</div>
 			</div>
