--- a/opening.html
+++ b/opening.html
@@ -2,7 +2,8 @@
 <title>Opening page</title>
 <!--Strong=BOLD/important-->
 <head>
-    <link rel="stylesheet" href="style.scss">
+  <!--<script defer src="/dist/script.js"></script>-->
+  <link rel="stylesheet" href="style.scss">
   <strong>go out and</strong> 
   <h1>Wordle</h1>
 
@@ -11,4 +12,7 @@
 
   
 </head>
+<body>
+  
+</body>
 </html>
